--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="win_result">Вы проебались и сейчас можете закрыть операцию потеряв </string>
     <string name="loser_result">Вы наварили бабла на </string>
     <string name="title_enter_button">Увидеть результат</string>
+
+
+    <string name="history_item_title">"Вы продали %1$s %2$s</string>
+    <string name="history_item_subtitle">"По цене %1$s %2$s</string>
 </resources>
