--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="title_enter_button">Увидеть результат</string>
 
 
-    <string name="history_item_title">"Вы продали %1$s %2$s</string>
-    <string name="history_item_subtitle">"По цене %1$s %2$s</string>
+    <string name="history_item_title">Вы продали %1$s %2$s</string>
+    <string name="history_item_subtitle">По цене %1$s %2$s</string>
+
+    <string name="currency_dialog_title">Выберите валютную пару открытия операции</string>
 </resources>
